  * Thhe GPU with a GOP instance having the highest resolution is now selected instead (as intended)
  * NB: RefindPlus does not check whether a GPU is actually connected to a display
  *     Hence, a blank display will result if the highest resolution GPU is not connected
  * This bug was introduced in v0.12.0.AN (Commit 62e6fe8)
- Improves APFS Volume Role Identification
  * APFS volume roles are now identified by their predefined 'Disk Roles'
  * The 'SyncAPFS' feature no longer requires a default name pattern (in English) for APFS Data volumes
  * Additionally, the 'SyncAPFS' feature has been optimised for faster completion
- Improves 'PreviousBoot' Implementation
  * Only Loaders (Row 1 Items) are saved as 'PreviousBoot' when this is configured to be saved
  * Such Loaders are only saved after verification and not regardless as was the case
- Improves 'IgnorePreviousBoot' Implementation
  * This token is now enforced everywhere when set
  * Setting '+' under the 'default_selection' token will therefore have no effect in such cases
  * NB: Setting 'default_selection "+"' remains equivalent to commenting that token out
  *     This default setting will continue to function as before
- Improves NVRAM Management
  * NVRAM Entries (Emulated and Hardware) are fully cleared before new entries are made
- Improves Graphics Mode Selection
    * Eliminates unnecessary iteration over UGA/GOP modes when only one UGA/GOP instance exists
    * This improves loading speed.
- Extends Memory Management Fixes
  * Additional memory management improvements
- Renames Misc Configuration Tokens
    * The 'decline_XYZ' format is now used for options to disable divergent defaults
    * 'scan_other_esp' as 'decline_espfilter'
    * 'ignore_tag_help' as 'decline_tagshelp'
    * 'sync_apfs' as 'decline_apfssync' ('SyncAPFS' is now active by default)
    * 'supply_apfs' as 'decline_apfsload' ('SupplyAPFS' is now active by default)